--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,6 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="chats">Chats</string>
     <string name="events">Events</string>
-    <string name="to_do">TO DO</string>
-    <string name="split_wise">Split-wise</string>
+    <string name="to_do">To Do</string>
+    <string name="balances">Balances</string>
 </resources>
