--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,8 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="save">Save</string>
+    <string name="start_button_text">Start</string>
+    <string name="end_button_text">End</string>
+    <string name="busy_button_text">Busy</string>
 </resources>
