[PLAN-20] Initial Preferences Database and Preferences page had been created, with some error validation present

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="start_button_text">Start</string>
     <string name="end_button_text">End</string>
     <string name="busy_button_text">Busy</string>
+    <string name="available_from_string">Available from: %1$s to %2$s</string>
 </resources>
