--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="nav_add_friends">Add friends</string>
     <string name="log_out">Log out</string>
     <string name="add_friends">Add friends</string>
+    <string name="search_users">Search</string>
 </resources>
