--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,6 @@
     <string name="no_users_found">No users found</string>
     <string name="calendar_icon">Calendar Icon</string>
     <string name="group_icon">Group Icon</string>
+    <string name="fab">FAB</string>
+    <string name="nav_new_chat">New Chat</string>
 </resources>
