--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="no_users_found">No users found</string>
     <string name="calendar_icon">Calendar Icon</string>
     <string name="group_icon">Group Icon</string>
+    <string name="fab">FAB</string>
 </resources>
