Fixed toolbars to have back button and display correct titles - PLAN 42 & 47

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
 
     <string name="message_hint">Message…</string>
     <string name="save">Save</string>
+    <string name="transactions">Transactions</string>
     <string name="start_button_text">Start</string>
     <string name="end_button_text">End</string>
     <string name="busy_button_text">Busy</string>
