Adding new Events to DB + TODO items visible in calendar fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="due_date">Due Date</string>
     <string name="add_new_todo_item">Add New Todo Item</string>
     <string name="date_placeholder">%d/%d/%d</string>
+    <string name="time_placeholder">%1$d:%2$02d</string>
     <string name="cancel">Cancel</string>
     <string name="nav_add_friends">Add friends</string>
     <string name="log_out">Log out</string>
@@ -93,4 +94,7 @@
     <string name="calendar_icon">Calendar Icon</string>
     <string name="group_icon">Group Icon</string>
     <string name="fab">FAB</string>
+    <string name="date">Date</string>
+    <string name="time">Time</string>
+    <string name="location">Location</string>
 </resources>
