--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,7 +103,7 @@
     <string name="you">"You: "</string>
     <string name="name_placeholder_with_colon">"%1$s %2$s: "</string>
     <string name="name_placeholder">%1$s %2$s</string>
-    <string name="balance_placeholder">$ %1$s</string>
+    <string name="balance_placeholder"> %1$s</string>
     <string name="you_are_owed">You are owed:</string>
     <string name="you_owe_with_colon">You owe:</string>
     <string name="date">Date</string>
