--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,4 +123,5 @@
     <string name="a_verification_email_has_been_sent_please_verify_your_email">A verification email has been sent to your email. Please verify your account before proceeding.</string>
     <string name="forgot_password">Forgot Password</string>
     <string name="password_reset_email">An email with a password reset link has been sent</string>
+    <string name="add_new_expense">Add new expense</string>
 </resources>
