--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,8 @@
     <string name="is_paying_you_transaction">%1$s %2$s is paying you %3$s</string>
     <string name="you_are_paying_transactions">You are paying %1$s %2$s %3$s</string>
     <string name="balance_with_this_user_is_already_settled">Balance with this user is already settled</string>
-    <string name="settled_balances_you">%1$s %2$s settled balances you</string>
+    <string name="settled_balances_you">%1$s %2$s settled balances with you</string>
     <string name="you_settled_balances_with">You settled balances with %1$s %2$s</string>
+    <string name="amount_cannot_be_zero">Amount cannot be zero</string>
+    <string name="amount">Amount</string>
 </resources>
